docs: first route swagger
